
	Endless Tower+
	13412 Naght_Seiger_Twin_Edge	Chance while attacking to pierce enemy defence for 5 seconds.
	13413 Naght_Seiger_Twin_Edge_	Chance while attacking to pierce enemy defence for 5 seconds.
	1185 Violet_Fear		Chance while attacking to pierce enemy defence for 5 seconds.
	2385 Recuvative_Armor		Should trigger HP/SP return with magical kills as well.

=======================
2008/06/07
	* Fixed 4210,Wander_Man_Card and 2515,Wing_Of_Eagle Walk Speed bonus bugreport:1326
	* Fixed 2656,Hyper_Changer (Armor Charm) not giving +1 DEF.
	* Fixed 5125,Kiss_Of_Angel sp regen bonus (3->5%).
	* Fixed 4389,Plasma_Card chance of droping resist potios, should have chance of droping all 4, not 1 out of 4.
	* Fixed 4407,Randgris_Card chance of autocasting dispell (1->5%).
	* Fixed 4386,Detale_Card chance of autocasting land protector (5->7%).
	* Fixed drain rate and HP regen penalty of 4367,B_Shecil_Card.
	* Gemini Card adds 50% resist against Stone and Sleep if vit >=80.
	* Reverted DEX bonus removal from last commit.
	* Item 5324,Little_Angel_Doll give no dex bonus, fixed chance of triggering autocast.
	* Fixed Doom slayer stun script according to 11.3 aegis.

2008/05/31
	* Rev. 12750 Fixed Slotted Grand cross not enabling TU 3. (bugreport:1563) [L0ne_W0lf]
	* Fixed assassin robe set checking for the wrong item. (bugreport:1576)
	* Rev. 12749 Implemented some of the 13.1 equipment (no weapons yet.) [L0ne_W0lf]
	* Added sprite ID and names for the 13.1 monsters. (no stats)
2008/05/28
	* Rev. r12736 Added new maps related to episode 13.1. [L0ne_W0lf]
2008/05/24
	* Rev. 12719 Fixed Satan Morroc and Injured Satan Morroc stats (bugreport:1546) [L0ne_W0lf]
	* Fixed a few instances of pneuma being casted on target. (bugreport:1557)
	* Fixed Desert Twilight increasing damage to demi (bugreport:1559)
2008/05/19
	* Fixed Thorny Shield and Survivor's Manteau [Playtester]
2008/05/14
	* Rev. 12709 Added Satan Morroc and Morroc Shadow monster stats. [L0ne_W0lf]
2008/05/13