@@ -4,6 +4,7 @@ AS OF SVN REV. 5091, WE ARE NOW USING TRUNK.  ALL UNTESTED BUGFIXES/FEATURES GO 
 IF YOU HAVE A WORKING AND TESTED BUGFIX PUT IT INTO STABLE AS WELL AS TRUNK.
 
 2008/06/07
+	* Swapped the W_SHOTGUN and W_GATLING weapon type IDs [ultramage]
 	* Fixed GD_EMERGENCYCALL not working inside gvg castles when WoE is off, bugreport:1637 fix by Meyraw [Brainstorm]
 	* Kaite should not work against high-level mobs (bugreport:1623)
 	* Fixed 'soundeffectall' not reading its params correctly [ultramage]
